syntax = "proto3";
package emerald.vault;
import "crypto.proto";

message Seed {
    string id = 1;

    oneof seed_source {
        Encrypted bytes = 2;
        LedgerSeed ledger = 3;
    }
}

message LedgerSeed {
    repeated HDPathFingerprint fingerprints = 1;
}

message HDPathFingerprint {
    string path = 1;
    Type type = 2;
    bytes fingerprint = 3;

    enum Type {
        UNKNOWN = 0;
        ADDRESS_SHA256 = 1;
    }
}

message SeedHD {
    string seed_id = 1;
    oneof path_type {
        string path = 2;
        //m/purpose'/coin'/account'
        AccountId account = 3;
    }
}

message AccountId {
    uint32 purpose = 1;
    uint32 coin = 2;
    uint32 account = 3;
}
